gitops/security/falco/falco-instance.yaml
apiVersion: v1
kind: Service
metadata:
  name: falco-k8saudit
  namespace: falco
spec:
  selector:
    app.kubernetes.io/name: falco
  ports:
    - name: k8saudit
      port: 9765
      targetPort: 9765
      protocol: TCP
