gitops/security/falco/httproutes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: falcosidekick-ui
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: internal
      namespace: gateway
      sectionName: https
  hostnames:
    - falcosidekick.nulcell.com
  rules:
    - matches:
        - path: { type: PathPrefix, value: / }
      backendRefs:
        - group: ""
          kind: Service
          name: falcosidekick-ui
          port: 2802
          weight: 1
